--- a/example/index.html
+++ b/example/index.html
@@ -12,8 +12,7 @@
     <link rel="stylesheet" href="../bower_components/mr-trevor-js/sir-trevor-icons.css" type="text/css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="../bower_components/mr-trevor-js/sir-trevor.css" type="text/css" media="screen" title="no title" charset="utf-8">
 
-    <link rel="stylesheet" href="../build/sir-trevor-columns-block.css" type="text/css" media="screen" title="no title" charset="utf-8">
-    <link rel="stylesheet" href="../build/sir-trevor-columns-block-icons.css" type="text/css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="../dist/sir-trevor-columns-block.all.css" type="text/css" media="screen" title="no title" charset="utf-8">
 
 </head>
 <body>
@@ -31,7 +30,7 @@
 <script src="../bower_components/jquery/dist/jquery.js" type="text/javascript" charset="utf-8"></script>
 <script src="../bower_components/mr-trevor-js/sir-trevor.debug.js" type="text/javascript" charset="utf-8"></script>
 
-<script src="../build/sir-trevor-columns-block.js" type="text/javascript" charset="utf-8"></script>
+<script src="../dist/sir-trevor-columns-block.js" type="text/javascript" charset="utf-8"></script>
 
 <script type="text/javascript" charset="utf-8">
     $(function(){
